dev-capec/force-app/main/default/objects/ItemDoacao__c/ItemDoacao__c.object-meta.xml
<CustomObject>
    <label>Item de Doação</label>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Item de Doação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de Doações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>