dev-capec/force-app/main/default/objects/ItemDoacao__c/fields/CestaBasica__c.field-meta.xml
<CustomField>
    <fullName>CestaBasica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cesta básica</label>
    <referenceTo>CestaBasica__c</referenceTo>
    <relationshipLabel>Itens de Doações</relationshipLabel>
    <relationshipName>ItensDoacoes</relationshipName>
    <type>Lookup</type>
</CustomField>