dev-capec/force-app/main/default/objects/ItemDoacao__c/fields/Doacao__c.field-meta.xml
<CustomField>
    <fullName>Doacao__c</fullName>
    <label>Doação</label>
    <referenceTo>Doacao__c</referenceTo>
    <relationshipLabel>Itens</relationshipLabel>
    <relationshipName>ItensDoacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>