dev-capec/force-app/main/default/objects/ItemDoacao__c/fields/Item_de_Estoque__c.field-meta.xml
<CustomField>
    <fullName>Item_de_Estoque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item de Estoque</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O estoque desse item está zerado.</errorMessage>
        <filterItems>
            <field>ItemEstoque__c.Quantidade__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ItemEstoque__c</referenceTo>
    <relationshipLabel>Itens de Doações</relationshipLabel>
    <relationshipName>ItensDoacoes</relationshipName>
    <type>Lookup</type>
</CustomField>