dev-capec/force-app/main/default/objects/ItemDoacao__c/fields/ItemCestaBasica__c.field-meta.xml
<CustomField>
    <fullName>ItemCestaBasica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item da Cesta Básica</label>
    <type>Checkbox</type>
</CustomField>