dev-capec/force-app/main/default/objects/ItemDoacao__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens de Doações</relationshipLabel>
    <relationshipName>ItensDoacoes</relationshipName>
    <type>Lookup</type>
</CustomField>