dev-capec/force-app/main/default/objects/ItemDoacao__c/fields/ProdutoRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>ProdutoRecordTypeId__c</fullName>
    <formula>Produto__r.RecordType.Id</formula>
    <label>ProdutoRecordTypeId</label>
    <type>Text</type>
</CustomField>