dev-capec/force-app/main/default/objects/ItemDoacao__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>