dev-capec/force-app/main/default/objects/ItemDoacao__c/recordTypes/ItemUnico.recordType-meta.xml
<RecordType>
    <fullName>ItemUnico</fullName>
    <active>true</active>
    <label>Item único</label>
</RecordType>