dev-capec/force-app/main/default/objects/ItemDoacao__c/recordTypes/Padrao.recordType-meta.xml
<RecordType>
    <fullName>Padrao</fullName>
    <active>true</active>
    <label>Padrão</label>
</RecordType>