dev-capec/force-app/main/default/objects/ItemDoacao__c/validationRules/QtdDoadaMaiorQtdEstoque.validationRule-meta.xml
<ValidationRule>
    <fullName>QtdDoadaMaiorQtdEstoque</fullName>
    <active>true</active>
    <errorConditionFormula>Quantidade__c &gt; Item_de_Estoque__r.Quantidade__c</errorConditionFormula>
    <errorDisplayField>Quantidade__c</errorDisplayField>
    <errorMessage>A quantidade doada é superior à quantidade em estoque.</errorMessage>
</ValidationRule>