dev-capec/force-app/main/default/objects/ItemDoacao__c/listViews/CestasBasicas.listView-meta.xml
<ListView>
    <fullName>CestasBasicas</fullName>
    <columns>NAME</columns>
    <columns>Doacao__c</columns>
    <columns>CestaBasica__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ItemDoacao__c.CestaBasica</value>
    </filters>
    <label>Cestas básicas</label>
</ListView>