dev-capec/force-app/main/default/objects/ItemDoacao__c/listViews/ItensUnicos.listView-meta.xml
<ListView>
    <fullName>ItensUnicos</fullName>
    <columns>NAME</columns>
    <columns>Doacao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ItemDoacao__c.Padrao</value>
    </filters>
    <label>Itens únicos</label>
</ListView>